<resources>
    <string name="app_name">Arbor</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="item_image">Item image</string>
    <string name="item_name">Item Name</string>
    <string name="company_name">Arbor</string>
    <string name="company_icon">Company Icon</string>
    <string name="company_tag_line">Items at your doorstep</string>
    <string name="clover_image">Clover Image</string>
    <string name="Heading">Explore</string>
    <string name="sub_heading">Our categories</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="category">Category</string>
    <string name="data_image">Data Image</string>
    <string name="brand_name">Brand Name</string>
    <string name="stock">Stock</string>
    <string name="real_price">Real Price</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="price_text">Price:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="item_details">Item details</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="quantity">Quantity</string>
    <string name="into_your_account">into your account</string>
    <string name="mobile_no">Mobile no</string>
    <string name="password">Password</string>
    <string name="register_here">Don\'t have an account? Register here</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="login_here">Already have an account? Login here</string>
    <string name="edit_information">Edit Information</string>
    <string name="username_image">Username image</string>
    <string name="username">Username</string>
    <string name="username_text">chandan_sharma</string>
    <string name="item_amount">Item amount</string>
    <string name="item_size">Item size</string>
    <string name="delete_item">Delete item</string>
    <string name="order">Order</string>
    <string name="no_items_to_show">No items to show</string>
    <string name="select_your_payment_type">Select Your Payment Type</string>
    <string name="pay_pal">PayPal</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="order_date_and_time">Order Date and Time</string>
    <string name="delivery_date_and_time">Delivery Date and Time</string>
    <string name="payment_method">Payment Method</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="return_item">Return Item</string>
    <string name="forget_password">forget password?</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="change_password">Change password</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="check_password">Check password</string>
</resources>
