<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="50dp"
    android:layout_margin="15dp"
    android:elevation="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:contentDescription="@string/item_image"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="fitXY"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <TextView
            android:id="@+id/brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/brand_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/item_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text="@string/item_size"/>

        <TextView
            android:id="@+id/item_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text="@string/item_amount"/>

        <TextView
            android:id="@+id/order_date_and_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text="@string/order_date_and_time"/>

        <TextView
            android:id="@+id/delivery_date_and_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text="@string/delivery_date_and_time"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginBottom="5dp"
            android:text="@string/payment_method"/>

        <Button
            android:id="@+id/return_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:text="@string/return_item"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/return_button"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>