<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    app:cardCornerRadius="50dp"
    android:focusable="true"
    android:layout_margin="2dp"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:scaleType="fitCenter"
            android:contentDescription="@string/item_image"
            android:layout_width="100dp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/brand_name"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/item_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/item_amount"/>

            <TextView
                android:id="@+id/item_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/item_size"/>

            <TextView
                android:id="@+id/item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/price"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/delete_button"
            android:contentDescription="@string/delete_item"
            android:src="@drawable/bin"
            android:background="@drawable/delete_button"
            android:layout_width="60dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>