<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:elevation="8dp"
    app:cardCornerRadius="50dp"
    android:layout_margin="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/item_image"
                android:id="@+id/image"
                android:layout_width="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/brand_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/item_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:text="@string/item_size"/>

                <TextView
                    android:id="@+id/item_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:text="@string/item_amount"/>

                <TextView
                    android:id="@+id/order_date_and_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:text="@string/order_date_and_time"/>

                <TextView
                    android:id="@+id/delivery_date_and_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:text="@string/delivery_date_and_time"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:text="@string/price"/>

                <TextView
                    android:id="@+id/payment_method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:text="@string/payment_method"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/cancel_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_order"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/return_button"
            android:textAllCaps="false"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>