<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:elevation="8dp"
    android:layout_margin="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/data_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/data_image"
            android:contentDescription="@string/data_image"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:layout_marginEnd="2dp"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/brand_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand_name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginBottom="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_text"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/real_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/real_price"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discount"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="4dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>