<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/quantity_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/minus"
                android:onClick="quantitySetter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0.1"
                android:text="@string/minus"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/button"/>


            <TextView
                android:id="@+id/quantity"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/quantity"
                android:textSize="20sp"
                android:textStyle="normal"
                android:layout_weight="0.8" />

            <Button
                android:id="@+id/plus"
                android:onClick="quantitySetter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_weight="0.1"
                android:text="@string/plus"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/button"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/image"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="fitCenter"
            android:foregroundGravity="center"
            android:gravity="center"
            android:contentDescription="@string/item_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantity_layout" />

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/image"/>

        <LinearLayout
            android:id="@+id/spinner_layout"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:foregroundGravity="center"
            android:translationY="-16dp"
            android:background="@drawable/frame_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/stock"
            android:textSize="25sp"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintTop_toBottomOf="@+id/spinner_layout"/>

        <LinearLayout
            android:id="@+id/price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/stock">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_text"
                android:textStyle="normal"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/real_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_price"
                android:textStyle="normal"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textStyle="normal"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:textStyle="normal"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="4dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/brand_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/price_layout"/>

        <TextView
            android:id="@+id/details"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/item_details"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/brand"/>

        <Button
            android:id="@+id/add_to_cart"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:text="@string/add_to_cart"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>
</androidx.drawerlayout.widget.DrawerLayout>