<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentTypeActivity">

    <TextView
        android:id="@+id/payment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:gravity="center"
        android:text="@string/select_your_payment_type"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/price"
        android:textStyle="normal"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/payment_text"/>

    <Button
        android:id="@+id/pay_pal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:background="@drawable/button"
        android:text="@string/pay_pal"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_price" />


    <Button
        android:id="@+id/cash_on_delivery"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:background="@drawable/button"
        android:text="@string/cash_on_delivery"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pay_pal" />
</androidx.constraintlayout.widget.ConstraintLayout>